tests/bad/const_in_func.oc
/// fail:  Constants are only allowed in the global scope

// Previously, this was getting stuck in an infinite loop
// in the parser.

def main() {
    const my_u32: u32 = 5
}